# warehouse-spice-risk

./: .gitignore  DSP Notes.docx  DSP-UFCFXK-30-3-REPORT-2025-26.docx  Literature review.docx  Project Proposal.docx  README.md  Report (AI).docx  Report (humanized).docx  ble_read.py  dsp-meeting-logs.docx  dsp-poster-landscape.pptx  pod_ble_monitor.py
dashboard/: README.md  (+1 more)
gateway/: README.md  pyproject.toml
gateway/src/gateway/: config.py  firmware_config_loader.py  main.py
gateway/src/gateway/ble/: client.py  gatt.py  scanner.py
gateway/src/gateway/cli/: __init__.py  forecast_cli.py  gateway_cli.py  storage_cli.py
gateway/src/gateway/control/: resend.py
gateway/src/gateway/forecast/: __init__.py  outputs.py  runner.py  storage_adapter.py  telemetry_adjustments.py
gateway/src/gateway/ingesters/: ble_ingester.py  tcp_ingester.py
gateway/src/gateway/link/: __init__.py  diagnostics.py  stats.py  time_alignment.py
gateway/src/gateway/logging/: __init__.py  csv_logger.py  process_lock.py
gateway/src/gateway/multi/: __init__.py  orchestrator.py  record.py  router.py
gateway/src/gateway/preprocess/: clean.py  dewpoint.py  resample.py
gateway/tests/: test_csv_import.py  test_dewpoint.py  test_diagnostics.py  test_forecast_adjustments.py  test_forecast_runner.py  test_gateway_interval.py  test_multi_router.py  test_process_lock.py  test_raw_writer_dedupe.py  test_reassembler.py  test_resample_grid.py  test_sqlite_storage.py  test_tcp_ingester.py  test_validation.py  test_watchdog.py  test_writer_pipeline.py
gateway/tools/: dump_services.py  scan_only.py
(+300 files in other folders)
